# OpenLoco

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTORS.MD  CONTRIBUTORS.md  ChangeLoan.cpp  DEVELOPMENTLOG.md  Dockerfile  LICENSE  README.md  agents.md  appveyor.yml  docker-compose.yml  extract_track_coordinates_4f6f8c.py  find_loco_globals.py  loco_globals.xml  openloco.common.props  openloco.sln  run-mac.sh  vcpkg.json
allocators/: CMakeLists.txt
allocators/includes/: Allocator.h  FreeListAllocator.h  Utils.h
allocators/src/: FreeListAllocator.cpp
src/Console/: CMakeLists.txt
src/Console/src/: Console.cpp
src/Core/: CMakeLists.txt
src/Core/src/: BinaryStream.cpp  FileStream.cpp  MemoryStream.cpp  Numeric.cpp  Numerics.cpp  Prng.cpp
src/Core/tests/: EnumFlagsTests.cpp  FileStreamTests.cpp  MemoryStreamTests.cpp  NumericTests.cpp  NumericsTests.cpp  PrngTests.cpp  SerializationTest.cpp  StoreTests.cpp  TimerTest.cpp  TraitsTest.cpp
src/Diagnostics/: CMakeLists.txt
src/Diagnostics/src/: Console.cpp  LogFile.cpp  LogSink.cpp  LogTerminal.cpp  Logging.cpp
src/Diagnostics/tests/: AssertionTests.cpp  LoggingTests.cpp
src/Engine/: CMakeLists.txt
src/Gfx/: CMakeLists.txt
src/Gfx/src/: PngImage.cpp
src/Interop/: CMakeLists.txt
src/Interop/src/: Hook.cpp  Interop.cpp
src/OpenLoco/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  Company.cpp  Company.h  CompanyManager.cpp  CompanyManager.h  CompanyRecords.h  Config.cpp  Config.h  ConfigConvert.hpp  Console.cpp  Console.h  Currency.h  Date.cpp  Date.h  Economy.cpp  Economy.h  EditorController.cpp  EditorController.h  Environment.cpp  Environment.h  Game.cpp  Game.h  GameCommands.cpp  GameCommands.h  GameException.hpp  GameState.cpp  GameState.h  Gui.cpp  Gui.h  Industry.cpp  Industry.h  IndustryManager.cpp  IndustryManager.h  Input.cpp  Input.h  Intro.cpp  Intro.h  LabelFrame.h  (+60 more)
src/OpenLoco/Audio/: Audio.cpp  Audio.h  Channel.cpp  Channel.h  ChannelManager.cpp  ChannelManager.h  MusicChannel.cpp  MusicChannel.h  OpenAL.h  VehicleChannel.cpp  VehicleChannel.h
src/OpenLoco/Core/: LocoFixedVector.hpp  Optional.hpp  Span.hpp  Variant.hpp
src/OpenLoco/Drawing/: DrawSprite.cpp  DrawSprite.h  DrawSpriteBMP.cpp  DrawSpriteBMP.hpp  DrawSpriteHelper.hpp  DrawSpriteRLE.hpp  FPSCounter.cpp  FPSCounter.h  SoftwareDrawingEngine.cpp  SoftwareDrawingEngine.h
src/OpenLoco/Economy/: Currency.h  Economy.cpp  Economy.h
src/OpenLoco/Entities/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityTweener.cpp  EntityTweener.h  Misc.cpp  Misc.h  ThingManager.h
src/OpenLoco/GameCommands/: ChangeCompanyColour.cpp  ChangeCompanyFace.cpp  ChangeLandMaterial.cpp  ChangeLoan.cpp  Cheat.cpp  Cheat.h  CreateTree.cpp  GameCommands.cpp  GameCommands.h  LoadSaveQuit.cpp  RemoveBuilding.cpp  RemoveIndustry.cpp  RemoveTree.cpp  RemoveWall.cpp  RenameCompanyName.cpp  RenameCompanyOwner.cpp  RenameIndustry.cpp  RenameStation.cpp  RenameTown.cpp  SetGameSpeed.cpp  TogglePause.cpp  UpdateOwnerStatus.cpp  VehiclePickup.cpp
src/OpenLoco/GameStateHelpers/: LastGameOption.cpp  LastGameOption.h  Misc.cpp  Misc.h
src/OpenLoco/GameStateManagers/: LastGameOption.cpp  LastGameOptionManager.cpp  LastGameOptionManager.h
src/OpenLoco/Graphics/: Colour.cpp  Colour.h  Gfx.cpp  Gfx.h  ImageId.h  ImageIds.h  PaletteMap.cpp  PaletteMap.h  RenderTarget.cpp  RenderTarget.h  Types.h
src/OpenLoco/Input/: Keyboard.cpp  MouseInput.cpp  Shortcut.h  ShortcutManager.cpp  ShortcutManager.h
src/OpenLoco/Interop/: Hook.cpp  Hooks.cpp  Interop.cpp  Interop.hpp  emu.cpp  emu.h  i386.h
src/OpenLoco/Localisation/: ArgsWrapper.hpp  Conversion.cpp  Conversion.h  FormatArguments.hpp  LanguageFiles.cpp  LanguageFiles.h  Languages.cpp  Languages.h  StringIds.h  StringManager.cpp  StringManager.h  Unicode.cpp  Unicode.h
src/OpenLoco/Management/: Expenditures.h
src/OpenLoco/Map/: Animation.h  AnimationManager.cpp  AnimationManager.h  BuildingElement.cpp  BuildingElement.h  BuildingTile.cpp  IndustryElement.cpp  IndustryElement.h  Map.hpp  MapGenerator.cpp  MapGenerator.h  QuarterTile.h  RoadTile.cpp  SurfaceElement.h  SurfaceTile.cpp  Tile.cpp  Tile.h  TileElement.h  TileElementBase.h  TileLoop.hpp  TileManager.cpp  TileManager.h  Tree.cpp  Tree.h  Wave.h  WaveManager.cpp  WaveManager.h
src/OpenLoco/Math/: Bound.hpp  Triginometry.hpp  Trigonometry.cpp  Trigonometry.hpp  Vector.cpp  Vector.hpp
src/OpenLoco/Network/: Network.cpp  Network.h  NetworkBase.cpp  NetworkBase.h  NetworkClient.cpp  NetworkClient.h  NetworkConnection.cpp  NetworkConnection.h  NetworkServer.cpp  NetworkServer.h  Packet.h  Socket.cpp  Socket.h
src/OpenLoco/Objects/: AirportObject.cpp  AirportObject.h  BridgeObject.cpp  BridgeObject.h  BuildingObject.cpp  BuildingObject.h  CargoObject.cpp  CargoObject.h  ClimateObject.h  CompetitorObject.cpp  CompetitorObject.h  CurrencyObject.cpp  CurrencyObject.h  DockObject.cpp  DockObject.h  HillShapesObject.cpp  HillShapesObject.h  IndustryObject.cpp  IndustryObject.h  InterfaceSkinObject.cpp  InterfaceSkinObject.h  LandObject.cpp  LandObject.h  LevelCrossingObject.cpp  LevelCrossingObject.h  Object.h  ObjectIndex.cpp  ObjectIndex.h  ObjectManager.cpp  ObjectManager.h  RegionObject.cpp  RegionObject.h  RoadExtraObject.cpp  RoadExtraObject.h  RoadObject.cpp  RoadObject.h  RoadStationObject.cpp  RoadStationObject.h  RockObject.cpp  RockObject.h  (+32 more)
src/OpenLoco/Paint/: Paint.cpp  Paint.h  PaintEntity.cpp  PaintEntity.h  PaintIndustry.cpp  PaintMiscEntity.cpp  PaintMiscEntity.h  PaintSignal.cpp  PaintSignal.h  PaintStation.cpp  PaintTile.cpp  PaintTileDecorations.cpp  PaintTrack.cpp  PaintTrack.h  PaintTree.cpp  PaintVehicle.cpp  PaintVehicle.h
src/OpenLoco/Platform/: Crash.cpp  Crash.h  Platform.Macos.mm  Platform.Posix.cpp  Platform.Windows.cpp  Platform.h
src/OpenLoco/S5/: Limits.h  S5.cpp  S5.h  (+2 more)
src/Platform/: CMakeLists.txt
src/Version/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp  test.cpp  tests.vcxproj
(+1969 files in other folders)
